Fix failed tests and merge the old and new code