@@ -14,6 +14,7 @@
 
 package org.cloudfoundry.identity.uaa.security.web;
 
+import jakarta.annotation.PostConstruct;
 import lombok.extern.slf4j.Slf4j;
 import org.cloudfoundry.identity.uaa.util.UaaStringUtils;
 import org.cloudfoundry.identity.uaa.zone.CorsConfiguration;
@@ -30,6 +31,7 @@ import jakarta.servlet.http.HttpServletResponse;
 import java.io.IOException;
 import java.net.URI;
 import java.net.URISyntaxException;
+import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
@@ -84,40 +86,30 @@ public class CorsFilter extends OncePerRequestFilter {
     public static final String X_REQUESTED_WITH = "X-Requested-With";
     public static final String WILDCARD = "*";
 
-    private final CorsConfiguration xhrConfiguration = new CorsConfiguration();
-    private final CorsConfiguration defaultConfiguration = new CorsConfiguration();
-    private final IdentityZoneManager identityZoneManager;
-    private final boolean enforceSystemZoneSettings;
+    private CorsConfiguration xhrConfiguration = new CorsConfiguration();
+    private CorsConfiguration defaultConfiguration = new CorsConfiguration();
 
-    public CorsFilter(final IdentityZoneManager identityZoneManager,
-            final boolean enforceSystemZoneSettings) {
-        if (log.isInfoEnabled()) {
-            log.info("`cors.enforceSystemZonePolicyInAllZones` is set to `{}`. Per-zone CORS policy settings are to be {}.",
-                    enforceSystemZoneSettings, enforceSystemZoneSettings ? "ignored" : "honored");
-        }
-
-        //configure defaults for XHR vs non-XHR requests for default zone
+    public CorsFilter() {
+        //configure defaults for XHR vs non-XHR requests
         xhrConfiguration.setAllowedMethods(Arrays.asList(GET.toString(), OPTIONS.toString()));
         defaultConfiguration.setAllowedMethods(Arrays.asList(GET.toString(), OPTIONS.toString(), POST.toString(), PUT.toString(), DELETE.toString(), PATCH.toString()));
 
-        xhrConfiguration.setAllowedHeaders(Arrays.asList(ACCEPT, ACCEPT_LANGUAGE, CONTENT_TYPE, CONTENT_LANGUAGE, AUTHORIZATION, X_REQUESTED_WITH));
-        defaultConfiguration.setAllowedHeaders(Arrays.asList(ACCEPT, ACCEPT_LANGUAGE, CONTENT_TYPE, CONTENT_LANGUAGE, AUTHORIZATION));
+        xhrConfiguration.setAllowedHeaders(Arrays.asList(ACCEPT, ACCEPT_LANGUAGE, CONTENT_TYPE, CONTENT_LANGUAGE,AUTHORIZATION, X_REQUESTED_WITH));
+        defaultConfiguration.setAllowedHeaders(Arrays.asList(ACCEPT, ACCEPT_LANGUAGE, CONTENT_TYPE, CONTENT_LANGUAGE,AUTHORIZATION));
 
         xhrConfiguration.setAllowedCredentials(true);
         defaultConfiguration.setAllowedCredentials(false);
-
-        this.identityZoneManager = identityZoneManager;
-        this.enforceSystemZoneSettings = enforceSystemZoneSettings;
     }
 
+    @PostConstruct
     public void initialize() {
-        // initialize the configs for default zone
         for (CorsConfiguration configuration : Arrays.asList(xhrConfiguration, defaultConfiguration)) {
             configuration.getAllowedUriPatterns().clear();
             configuration.getAllowedOriginPatterns().clear();
             compileCorsAllowedPatterns(configuration);
         }
     }
+
 
     @Override
     protected void doFilterInternal(final HttpServletRequest request, final HttpServletResponse response,
@@ -130,206 +122,17 @@ public class CorsFilter extends OncePerRequestFilter {
             return;
         }
 
-        if (log.isDebugEnabled()) {
-            log.debug("CORS Processing request: {}", getRequestInfo(request));
+        if (logger.isDebugEnabled()) {
+            logger.debug("CORS Processing request: "+getRequestInfo(request));
         }
         if (isXhrRequest(request)) {
             handleRequest(request, response, filterChain, resolveXhrCorsConfiguration());
         } else {
             handleRequest(request, response, filterChain, resolveDefaultCorsConfiguration());
         }
-        if (log.isDebugEnabled()) {
-            log.debug("CORS processing completed for: {} Status:{}", getRequestInfo(request), response.getStatus());
+        if (logger.isDebugEnabled()) {
+            logger.debug("CORS processing completed for: "+getRequestInfo(request)+" Status:"+response.getStatus());
         }
-    }
-
-    protected boolean handleRequest(HttpServletRequest request,
-            HttpServletResponse response,
-            FilterChain filterChain,
-            CorsConfiguration configuration) throws IOException, ServletException {
-
-        boolean isPreflightRequest = OPTIONS.matches(request.getMethod());
-
-        //Validate if this CORS request is allowed for this method
-        String method = request.getMethod();
-        if (!isPreflightRequest && !isAllowedMethod(method, configuration)) {
-            log.debug("Request with invalid method was rejected: %s".formatted(method));
-            response.sendError(METHOD_NOT_ALLOWED.value(), "Illegal method.");
-            return true;
-        }
-
-
-        // Validate the origin so we don't reflect back any potentially dangerous content.
-        String origin = request.getHeader(ORIGIN);
-        // While origin can be a comma delimited list, we don't allow it for CORS
-        URI originURI;
-        try {
-            originURI = new URI(origin);
-        } catch (URISyntaxException e) {
-            log.debug("Request with invalid origin was rejected: %s".formatted(origin));
-            response.sendError(FORBIDDEN.value(), "Invalid origin");
-            return true;
-        }
-
-        if (!isAllowedOrigin(origin, configuration)) {
-            log.debug("Request with origin: %s was rejected because it didn't match allowed origins".formatted(origin));
-            response.sendError(FORBIDDEN.value(), "Illegal origin");
-            return true;
-        }
-
-        String requestUri = request.getRequestURI();
-        if (!isAllowedRequestUri(requestUri, configuration)) {
-            log.debug("Request with URI: %s was rejected because it didn't match allowed URIs".formatted(requestUri));
-            response.sendError(FORBIDDEN.value(), "Illegal request URI");
-            return true;
-        }
-
-        if (configuration.isAllowedCredentials()) {
-            //if we allow credentials, send back the actual origin
-            response.addHeader(ACCESS_CONTROL_ALLOW_ORIGIN, originURI.toString());
-        } else {
-            //send back a wildcard, this will prevent credentials
-            response.addHeader(ACCESS_CONTROL_ALLOW_ORIGIN, WILDCARD);
-        }
-
-        if (isPreflightRequest) {
-            log.debug("Request is a pre-flight request");
-            buildCorsPreFlightResponse(request, response, configuration);
-        } else {
-            log.debug("Request cross origin request has passed validation.");
-            filterChain.doFilter(request, response);
-        }
-
-        return false;
-    }
-
-    /**
-     * Returns true if we believe this is an XHR request
-     * We look for the presence of the X-Requested-With header
-     * or that the X-Requested-With header is listed as a value
-     * in the Access-Control-Request-Headers header.
-     * @param request the HTTP servlet request
-     * @return true if we believe this is an XHR request
-     */
-    protected boolean isXhrRequest(final HttpServletRequest request) {
-        if (StringUtils.hasText(request.getHeader(X_REQUESTED_WITH))) {
-            //the X-Requested-With header is present. This is a XHR request
-            return true;
-        }
-        String accessControlRequestHeaders = request.getHeader(ACCESS_CONTROL_REQUEST_HEADERS);
-        //One of the requested headers is X-Requested-With so we treat is as XHR request
-        return StringUtils.hasText(accessControlRequestHeaders) && containsHeader(accessControlRequestHeaders, X_REQUESTED_WITH);
-
-    }
-
-    /**
-     * Returns true if the `Origin` header is present and has any value
-     * @param request the HTTP servlet request
-     * @return true if the `Origin` header is present
-     */
-    protected boolean isCrossOriginRequest(final HttpServletRequest request) {
-        //presence of the origin header indicates CORS request
-        return StringUtils.hasText(request.getHeader(ORIGIN));
-    }
-
-    protected String buildCommaDelimitedString(List<String> list) {
-        StringBuilder builder = new StringBuilder();
-        for (String s : list) {
-            if (builder.length() > 0) {
-                builder.append(", ");
-            }
-            builder.append(s);
-        }
-        return builder.toString();
-    }
-
-    protected List<String> splitCommaDelimitedString(String s) {
-        String[] list = s.replace(" ", "").split(",");
-        if (list == null || list.length == 0) {
-            return Collections.emptyList();
-        }
-        return Arrays.asList(list);
-    }
-
-    protected void buildCorsPreFlightResponse(final HttpServletRequest request,
-            final HttpServletResponse response,
-            final CorsConfiguration configuration) throws IOException {
-        String accessControlRequestMethod = request.getHeader(ACCESS_CONTROL_REQUEST_METHOD);
-
-        //preflight requires the Access-Control-Request-Method header
-        if (null == accessControlRequestMethod) {
-            response.sendError(BAD_REQUEST.value(), "Access-Control-Request-Method header is missing");
-            return;
-        }
-
-        if (!isAllowedMethod(accessControlRequestMethod, configuration)) {
-            response.sendError(METHOD_NOT_ALLOWED.value(), "Illegal method requested");
-            return;
-        }
-
-        //add all methods that we allow
-        response.addHeader(ACCESS_CONTROL_ALLOW_METHODS, buildCommaDelimitedString(configuration.getAllowedMethods()));
-
-        //we require Access-Control-Request-Headers header
-        String accessControlRequestHeaders = request.getHeader(ACCESS_CONTROL_REQUEST_HEADERS);
-        if (null == accessControlRequestHeaders) {
-            response.sendError(BAD_REQUEST.value(), "Missing " + ACCESS_CONTROL_REQUEST_HEADERS + " header.");
-            return;
-        }
-        if (!headersAllowed(accessControlRequestHeaders, configuration)) {
-            response.sendError(FORBIDDEN.value(), "Illegal header requested");
-            return;
-        }
-
-        //echo back what the client requested
-        response.addHeader(ACCESS_CONTROL_ALLOW_HEADERS, accessControlRequestHeaders);
-        //send back our configuration value
-        response.addHeader(ACCESS_CONTROL_MAX_AGE, String.valueOf(configuration.getMaxAge()));
-    }
-
-    protected boolean containsHeader(final String accessControlRequestHeaders, final String header) {
-        List<String> headers = splitCommaDelimitedString(accessControlRequestHeaders);
-        return containsIgnoreCase(headers, header);
-    }
-
-    protected boolean headersAllowed(final String accessControlRequestHeaders, CorsConfiguration configuration) {
-        List<String> headers = splitCommaDelimitedString(accessControlRequestHeaders);
-        for (String header : headers) {
-            if (!containsIgnoreCase(configuration.getAllowedHeaders(), header)) {
-                return false;
-            }
-        }
-        return true;
-    }
-
-    protected boolean isAllowedMethod(final String method, CorsConfiguration configuration) {
-        return containsIgnoreCase(configuration.getAllowedMethods(), method);
-    }
-
-    protected boolean isAllowedRequestUri(final String uri, CorsConfiguration configuration) {
-        if (UaaStringUtils.isEmpty(uri)) {
-            return false;
-        }
-
-        for (Pattern pattern : configuration.getAllowedUriPatterns()) {
-            // Making sure that the pattern matches
-            if (pattern.matcher(uri).find()) {
-                return true;
-            }
-        }
-        log.debug("The '%s' URI does not allow CORS requests.".formatted(uri));
-        return false;
-    }
-
-    protected boolean isAllowedOrigin(final String origin, CorsConfiguration configuration) {
-        for (Pattern pattern : configuration.getAllowedOriginPatterns()) {
-            // Making sure that the pattern matches
-            if (pattern.matcher(origin).find()) {
-                return true;
-            }
-        }
-        log.debug("The '%s' origin is not allowed to make CORS requests.".formatted(origin));
-        return false;
     }
 
     protected CorsConfiguration resolveXhrCorsConfiguration() {
@@ -382,15 +185,204 @@ public class CorsFilter extends OncePerRequestFilter {
             }
         }
     }
+
+    protected boolean handleRequest(HttpServletRequest request,
+                                    HttpServletResponse response,
+                                    FilterChain filterChain,
+                                    CorsConfiguration configuration) throws IOException, ServletException {
+
+        boolean isPreflightRequest = OPTIONS.matches(request.getMethod());
+
+        //Validate if this CORS request is allowed for this method
+        String method = request.getMethod();
+        if (!isPreflightRequest && !isAllowedMethod(method, configuration)) {
+            logger.debug(String.format("Request with invalid method was rejected: %s", method));
+            response.sendError(METHOD_NOT_ALLOWED.value(), "Illegal method.");
+            return true;
+        }
+
+
+        // Validate the origin so we don't reflect back any potentially dangerous content.
+        String origin = request.getHeader(ORIGIN);
+        // While origin can be a comma delimited list, we don't allow it for CORS
+        URI originURI;
+        try {
+            originURI = new URI(origin);
+        } catch(URISyntaxException e) {
+            logger.debug(String.format("Request with invalid origin was rejected: %s", origin));
+            response.sendError(FORBIDDEN.value(), "Invalid origin");
+            return true;
+        }
+
+        if (!isAllowedOrigin(origin, configuration)) {
+            logger.debug(String.format("Request with origin: %s was rejected because it didn't match allowed origins", origin));
+            response.sendError(FORBIDDEN.value(), "Illegal origin");
+            return true;
+        }
+
+        String requestUri = request.getRequestURI();
+        if (!isAllowedRequestUri(requestUri, configuration)) {
+            logger.debug(String.format("Request with URI: %s was rejected because it didn't match allowed URIs", requestUri));
+            response.sendError(FORBIDDEN.value(), "Illegal request URI");
+            return true;
+        }
+
+        if (configuration.isAllowedCredentials()) {
+            //if we allow credentials, send back the actual origin
+            response.addHeader(ACCESS_CONTROL_ALLOW_ORIGIN, originURI.toString());
+        } else {
+            //send back a wildcard, this will prevent credentials
+            response.addHeader(ACCESS_CONTROL_ALLOW_ORIGIN, WILDCARD);
+        }
+
+        if (isPreflightRequest) {
+            logger.debug("Request is a pre-flight request");
+            buildCorsPreFlightResponse(request, response, configuration);
+        } else {
+            logger.debug("Request cross origin request has passed validation.");
+            filterChain.doFilter(request, response);
+        }
+
+        return false;
+    }
+
+    /**
+     * Returns true if we believe this is an XHR request
+     * We look for the presence of the X-Requested-With header
+     * or that the X-Requested-With header is listed as a value
+     * in the Access-Control-Request-Headers header.
+     * @param request the HTTP servlet request
+     * @return true if we believe this is an XHR request
+     */
+    protected boolean isXhrRequest(final HttpServletRequest request) {
+        if (StringUtils.hasText(request.getHeader(X_REQUESTED_WITH))) {
+            //the X-Requested-With header is present. This is a XHR request
+            return true;
+        }
+        String accessControlRequestHeaders = request.getHeader(ACCESS_CONTROL_REQUEST_HEADERS);
+        //One of the requested headers is X-Requested-With so we treat is as XHR request
+        return StringUtils.hasText(accessControlRequestHeaders) && containsHeader(accessControlRequestHeaders, X_REQUESTED_WITH);
+
+    }
+
+    /**
+     * Returns true if the `Origin` header is present and has any value
+     * @param request the HTTP servlet request
+     * @return true if the `Origin` header is present
+     */
+    protected boolean isCrossOriginRequest(final HttpServletRequest request) {
+        //presence of the origin header indicates CORS request
+        return StringUtils.hasText(request.getHeader(ORIGIN));
+    }
+
+    protected String buildCommaDelimitedString(List<String> list) {
+        StringBuilder builder = new StringBuilder();
+        for (String s : list) {
+            if (builder.length()>0) {
+                builder.append(", ");
+            }
+            builder.append(s);
+        }
+        return builder.toString();
+    }
+
+    protected List<String> splitCommaDelimitedString(String s) {
+        String[] list = s.replace(" ", "").split(",");
+        if (list==null || list.length==0) {
+            return Collections.EMPTY_LIST;
+        }
+        return Arrays.asList(list);
+    }
+
+    protected void buildCorsPreFlightResponse(final HttpServletRequest request,
+                                              final HttpServletResponse response,
+                                              final CorsConfiguration configuration) throws IOException {
+        String accessControlRequestMethod = request.getHeader(ACCESS_CONTROL_REQUEST_METHOD);
+
+        //preflight requires the Access-Control-Request-Method header
+        if (null == accessControlRequestMethod) {
+            response.sendError(BAD_REQUEST.value(), "Access-Control-Request-Method header is missing");
+            return;
+        }
+
+        if (!isAllowedMethod(accessControlRequestMethod, configuration)) {
+            response.sendError(METHOD_NOT_ALLOWED.value(), "Illegal method requested");
+            return;
+        }
+
+        //add all methods that we allow
+        response.addHeader(ACCESS_CONTROL_ALLOW_METHODS, buildCommaDelimitedString(configuration.getAllowedMethods()));
+
+        //we require Access-Control-Request-Headers header
+        String accessControlRequestHeaders = request.getHeader(ACCESS_CONTROL_REQUEST_HEADERS);
+        if (null == accessControlRequestHeaders) {
+            response.sendError(BAD_REQUEST.value(),"Missing "+ACCESS_CONTROL_REQUEST_HEADERS+" header.");
+            return;
+        }
+        if (!headersAllowed(accessControlRequestHeaders, configuration)) {
+            response.sendError(FORBIDDEN.value(), "Illegal header requested");
+            return;
+        }
+
+        //echo back what the client requested
+        response.addHeader(ACCESS_CONTROL_ALLOW_HEADERS, accessControlRequestHeaders);
+        //send back our configuration value
+        response.addHeader(ACCESS_CONTROL_MAX_AGE, String.valueOf(configuration.getMaxAge()));
+    }
+
+    protected boolean containsHeader(final String accessControlRequestHeaders, final String header) {
+        List<String> headers = splitCommaDelimitedString(accessControlRequestHeaders);
+        return containsIgnoreCase(headers, header);
+    }
+
+    protected boolean headersAllowed(final String accessControlRequestHeaders, CorsConfiguration configuration) {
+        List<String> headers = splitCommaDelimitedString(accessControlRequestHeaders);
+        for (String header : headers) {
+            if (!containsIgnoreCase(configuration.getAllowedHeaders(), header)) {
+                return false;
+            }
+        }
+        return true;
+    }
+
+    protected boolean isAllowedMethod(final String method, CorsConfiguration configuration) {
+        return containsIgnoreCase(configuration.getAllowedMethods(), method);
+    }
+
+    protected boolean isAllowedRequestUri(final String uri, CorsConfiguration configuration) {
+        if (StringUtils.isEmpty(uri)) {
+            return false;
+        }
+
+        for (Pattern pattern : configuration.getAllowedUriPatterns()) {
+            // Making sure that the pattern matches
+            if (pattern.matcher(uri).find()) {
+                return true;
+            }
+        }
+        logger.debug(String.format("The '%s' URI does not allow CORS requests.", uri));
+        return false;
+    }
+
+    protected boolean isAllowedOrigin(final String origin, CorsConfiguration configuration) {
+        for (Pattern pattern : configuration.getAllowedOriginPatterns()) {
+            // Making sure that the pattern matches
+            if (pattern.matcher(origin).find()) {
+                return true;
+            }
+        }
+        logger.debug(String.format("The '%s' origin is not allowed to make CORS requests.",origin));
+        return false;
+    }
     //----------------REQUEST INFO ----------------------------------------------//
     public String getRequestInfo(HttpServletRequest request) {
-        return "URI: %s; Scheme: %s; Host: %s; Port: %s; Origin: %s; Method: %s".formatted(
-                request.getRequestURI(),
-                request.getScheme(),
-                request.getServerName(),
-                request.getServerPort(),
-                request.getHeader("Origin"),
-                request.getMethod());
+        return String.format("URI: %s; Scheme: %s; Host: %s; Port: %s; Origin: %s; Method: %s",
+                             request.getRequestURI(),
+                             request.getScheme(),
+                             request.getServerName(),
+                             request.getServerPort(),
+                             request.getHeader("Origin"),
+                             request.getMethod());
     }
 
     //----------------CORS XHR ONLY ---------------------------------------------//
@@ -403,7 +395,7 @@ public class CorsFilter extends OncePerRequestFilter {
     }
 
     public void setCorsXhrAllowedHeaders(List<String> allowedHeaders) {
-        this.xhrConfiguration.setAllowedHeaders(List.copyOf(allowedHeaders));
+        this.xhrConfiguration.setAllowedHeaders(new ArrayList<>(allowedHeaders));
     }
 
     public void setCorsXhrAllowedCredentials(boolean allowedCredentials) {
@@ -411,7 +403,7 @@ public class CorsFilter extends OncePerRequestFilter {
     }
 
     public void setCorsXhrAllowedMethods(List<String> corsXhrAllowedMethods) {
-        this.xhrConfiguration.setAllowedMethods(List.copyOf(corsXhrAllowedMethods));
+        this.xhrConfiguration.setAllowedMethods(new ArrayList<>(corsXhrAllowedMethods));
     }
 
     public void setCorsXhrMaxAge(int age) {
@@ -429,7 +421,7 @@ public class CorsFilter extends OncePerRequestFilter {
     }
 
     public void setCorsAllowedHeaders(List<String> allowedHeaders) {
-        this.defaultConfiguration.setAllowedHeaders(List.copyOf(allowedHeaders));
+        this.defaultConfiguration.setAllowedHeaders(new ArrayList<>(allowedHeaders));
     }
 
     public void setCorsAllowedCredentials(boolean allowedCredentials) {
@@ -437,7 +429,7 @@ public class CorsFilter extends OncePerRequestFilter {
     }
 
     public void setCorsAllowedMethods(List<String> corsXhrAllowedMethods) {
-        this.defaultConfiguration.setAllowedMethods(List.copyOf(corsXhrAllowedMethods));
+        this.defaultConfiguration.setAllowedMethods(new ArrayList(corsXhrAllowedMethods));
     }
 
     public void setCorsMaxAge(int age) {
